# heimdall

./: Cargo.toml  README.md  install.sh  mkrelease.sh  org.dubh.heimdall.plist
.github/workflows/: ci.yml
HomeBrewFormula/: heimdall-bin.rb
src/: api.rs  config.rs  constants.rs  main.rs  os.rs  runloop.rs  scratch.rs
static/: index.html  style.css
static/js/: app.js
