[package]
name = "heimdall"
version = "0.1.0"
authors = ["Brian Duff <cairndubh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
rocket = "0.4.7"
whoami = "1.1.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rocket_contrib = "0.4.7"
hostname = "^0.3"
plist = "1"
base64 = "0.13.0"
keyring = "0.10.1"

